--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,24 +1,15 @@
-output_dir: "docs"
 rmd_files:
   - "index.Rmd"
-#  - "research_topics.Rmd"
-#  - "research_methods.Rmd"
-#  - "skills.Rmd"
-  - "education.Rmd"
-  - "appointment.Rmd"
-  - "grant.Rmd"
-  # - "certificate.Rmd"
-  - "publication.Rmd"
-  - "healthcare.Rmd"
-  - "presentation.Rmd"
-  - "media_coverage.Rmd"
-  # - "work_exp.Rmd"
-  - "software_dev.Rmd"
-  - "teaching_exp.Rmd"
-  # - "research_exp.Rmd"
-  - "award.Rmd"
-  - "service.Rmd"
-  - "membership.Rmd"
-  # - "backmatter.Rmd"
-book_filename: "JooYoung_Seo_CV"
+  - "1_education.Rmd"
+  - "2_employment.Rmd"
+  - "3_academic_development.Rmd"
+ #  - "4_awards.Rmd"
+  - "5_funded_projects.Rmd"
+  - "5_1_collaboration_partners.Rmd"
+  - "6_service.Rmd"
+  - "7_teaching_exp.Rmd"
+ #  - "8_skills.Rmd"
+  - "9_publications.Rmd"
+book_filename: "Cory_Whitney_CV"
 delete_merged_file: true
+
